# renderdoc-skill

./: CMakeLists.txt  README.md  README_zh.md
.claude/skills/renderdoc-tool/: SKILL.md
docs/superpowers/plans/: 2026-03-25-renderdoc-tool.md
docs/superpowers/specs/: 2026-03-25-renderdoc-tool-design.md
src/: main.cpp  pipestate_impl.cpp
src/commands/: cmd_draws.cpp  cmd_event.cpp  cmd_info.cpp  cmd_open.cpp
src/core/: json_output.cpp  replay_context.cpp
src/include/: command.h  json_output.h  replay_context.h
